updated rhineland focus names

--- a/localisation/TRC_l_english.yml
+++ b/localisation/TRC_l_english.yml
@@ -18,7 +18,7 @@ TRC_the_new_army:0 "The New Army"
 TRC_the_new_army_desc:0 ""
 TRC_start_to_reform_the_rheinparlament:0 "Start to Reform the Rheinparlament"
 TRC_start_to_reform_the_rheinparlament_desc:0 "The Rheinparlament is full of corruption,the best things we can do is to reform the Rheinparlament,making the seats only 355 and crush illegitimate parties"
-TRC_crush_then:0 "Crush then!!"
+TRC_crush_then:0 "Crush them!"
 TRC_crush_then_desc:0 ""
 TRC_open_negotiations:0 "Open Negotiations"
 TRC_open_negotiations_desc:0 ""
@@ -26,47 +26,47 @@ TRC_invest_in_the_car_indrustry:0 "Invest in the Car Indrustry"
 TRC_invest_in_the_car_indrustry_desc:0 ""
 TRC_the_rheinmarshals_proposal:0 "The Rheinmarshal's proposal"
 TRC_the_rheinmarshals_proposal_desc:0 ""
-TRC_a_military_economy:0 "A military economy"
+TRC_a_military_economy:0 "Military Economy"
 TRC_a_military_economy_desc:0 ""
 TRC_dominate_the_rheinparlament:0 "Dominate the Rheinparlament"
 TRC_dominate_the_rheinparlament_desc:0 ""
-TRC_invest_in_military_factories:0 "Invest in Military factories"
+TRC_invest_in_military_factories:0 "Invest in Military Factories"
 TRC_invest_in_military_factories_desc:0 ""
-TRC_democracy_in_chaos:0 "Democracy in chaos"
+TRC_democracy_in_chaos:0 "Democracy in Chaos"
 TRC_democracy_in_chaos_desc:0 "For the survival of the country,the survival act has been activated,the act will limit some rights,but elections will be made...."
-TRC_the_armed_forces_of_the_rhine:0 "The Armed forces of the Rhine"
+TRC_the_armed_forces_of_the_rhine:0 "Armed Forces of the Rhine"
 TRC_the_armed_forces_of_the_rhine_desc:0 ""
 TRC_the_last_hope_of_the_empire:0 "The Last Hope of the Empire"
 TRC_the_last_hope_of_the_empire_desc:0 "We are the only free nation of the post-HRE colapse,we may have some problems with our democracy,but we will stand strong for an democratic Germany"
-TRC_start_to_reform_the_industry:0 "Start to Reform the Industry"
-TRC_start_to_reform_the_industry_desc:0 "If we reform the industry,we will be able to have a foot of the recovery,but we need to give more jobs and invest in our most industrial spot,but make the industry better in parts like Wallonia and Luxemburg"
+TRC_start_to_reform_the_industry:0 "Start to Reform our Industries"
+TRC_start_to_reform_the_industry_desc:0 "If we reform our industries, we will be able to have a foot of the recovery,but we need to give more jobs and invest in our most industrial spot,but make the industry better in parts like Wallonia and Luxemburg"
 TRC_no_reforms:0 "No Reforms!"
 TRC_no_reforms_desc:0 "WE DO NOT NEED REFORMS,we can get thru"
 TRC_adress_the_belgium_issue:0 "Address the Belgian Issue?"
 TRC_adress_the_belgium_issue_desc:0 "Since the Colapse of the Empire,we have been given Belgium,but these land only are making our country more sick with their independent movements that have only goten stronger...."
-TRC_the_needed_reforms:0 "The Needed Reforms"
+TRC_the_needed_reforms:0 "Needed Reforms"
 TRC_the_needed_reforms_desc:0 "A Reforms are needed so that our rhine democracy can survive...."
-TRC_start_to_reform_the_army:0 "Start to Reform the Army"
+TRC_start_to_reform_the_army:0 "Begin Reforming the Army"
 TRC_start_to_reform_the_army_desc:0 "If we want to be in peace,we must prepare for war,but our army has been seen as weak,but with some reforms,we can make it better..."
-TRC_military_build:0 "Military build"
+TRC_military_build:0 "Military Buildup"
 TRC_military_build_desc:0 ""
-TRC_invest_in_the_rhineland_factories:0 "Invest in the Rhineland factories"
+TRC_invest_in_the_rhineland_factories:0 "Invest in the Rhineland Factories"
 TRC_invest_in_the_rhineland_factories_desc:0 ""
-TRC_draw_closer_to_the_west:0 "Draw closer to the West"
+TRC_draw_closer_to_the_west:0 "Draw Closer to the West"
 TRC_draw_closer_to_the_west_desc:0 ""
-TRC_form_the_new_high_command:0 "Form the New High Command"
+TRC_form_the_new_high_command:0 "Restructure our High Command"
 TRC_form_the_new_high_command_desc:0 ""
-TRC_the_new_prussian_standarts:0 "The New Prussian Standards"
+TRC_the_new_prussian_standarts:0 "New Prussian Standards"
 TRC_the_new_prussian_standarts_desc:0 ""
-TRC_the_save_the_traditional_act:0 "The "Save the Traditional" act"
+TRC_the_save_the_traditional_act:0 ""Save the Traditional" Act"
 TRC_the_save_the_traditional_act_desc:0 ""
 TRC_the_new_military_state:0 "The New Military State"
 TRC_the_new_military_state_desc:0 ""
 TRC_the_rheinmarshals_victory:0 "The Rheinmarshal's victory"
 TRC_the_rheinmarshals_victory_desc:0 "The Marshal has won the election..."
-TRC_new_trade_deals:0 "New trade Deals"
+TRC_new_trade_deals:0 "New Trade Deals"
 TRC_new_trade_deals_desc:0 ""
-TRC_the_1937_elections:0 "The 1937 elections"
+TRC_the_1937_elections:0 "The Election of 1937"
 TRC_the_1937_elections_desc:0 "Today,the new election of 1937 made the winner..."
 TRC_the_rndc_victory:0 "The RNDC Victory"
 TRC_the_rndc_victory_desc:0 "The RNDC won the 1937 again..."
@@ -80,15 +80,15 @@ TRC_buy_british_tanks:0 "Buy British Tanks"
 TRC_buy_british_tanks_desc:0 ""
 TRC_our_military:0 "Our Military"
 TRC_our_military_desc:0 ""
-TRC_organize_the_rhine_military_guart:0 "Organize the Rhine military guart"
+TRC_organize_the_rhine_military_guart:0 "Establish the Rhine Military Guard"
 TRC_organize_the_rhine_military_guart_desc:0 ""
-TRC_the_condem_the_rheinparlament_act:0 "The "Condem The Rheinparlament" act"
+TRC_the_condem_the_rheinparlament_act:0 "Condem The Rheinparlament"
 TRC_the_condem_the_rheinparlament_act_desc:0 ""
 TRC_invest_in_belgian_tank_companies:0 "Invest in Belgian Tank Companies"
 TRC_invest_in_belgian_tank_companies_desc:0 ""
-TRC_send_the_military:0 "Send The Military"
+TRC_send_the_military:0 "Send in the Military"
 TRC_send_the_military_desc:0 ""
-TRC_the_presidents_proposal:0 "The President's proposal"
+TRC_the_presidents_proposal:0 "The President's Proposal"
 TRC_the_presidents_proposal_desc:0 ""
 TRC_make_more_guns:0 "Make More Guns"
 TRC_make_more_guns_desc:0 ""
