--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2655,3 +2655,11 @@
  BOH_the_rightful_empire_desc:0 "We are the heirs of the great Holy Roman Empire, and all of the soldiers loyal to the Kaiser will help enact his will of reuniting the empire!"
  BOH_idea_fascism:0 "Fascist Leanings"
  BOH_idea_fascism_desc:0 "Fascist leanings in the government."
+ SOV_idea_soviet_resistance:0 "Soviet Resistance"
+ SOV_idea_soviet_resistance_desc:0 "Soviet resistance groups are active in many major Russian cities."
+ SOV_imperial_governorate:0 "Imperial Governorate"
+ SOV_imperial_governorate_desc:0 "The [From.Owner.GetAdjective]s swear loyalty to Tsar Kirill Vladimirovich, the leader of Imperial Russia. Their Imperial Governorate status grants them limited autonomy."
+ SOV_unindustrialized:0 "Unindustrialized"
+ SOV_unindustrialized_desc:0 "The factories we currently have are very old, lacking modern standards, and have outdated equipment."
+ SOV_unpopular_monarch:0 "Unpopular Monarch"
+ SOV_unpopular_monarch_desc:0 "Tsar Kirill Vladimirovich is very unpopular among the people of Russia."
