--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -30,12 +30,6 @@
  SOV_russia:0 "Imperial Russia"
  SOV_russia_DEF:0 "Imperial Russia"
  SOV_russia_ADJ:0 "Russian"
- 
- SOV_imperial_govenorate:0 "Imperial Governorate"
- SOV_idea_soviet_resistance:0 "Soviet Resistance"
- SOV_unindustrialized:0 "Unindustrialized"
- SOV_unpopular_monarch:0 "Unpopular Monarch"
- 
  SOV_imperial_tour:0 "Imperial Tour"
  SOV_imperial_tour_desc:0 "WIP"
  SOV_visit_kiev:0 "Visit Kiev"
@@ -74,3 +68,6 @@
  rus.13.title:0 "The Russian Governorate Crisis of 1937"
  rus.13.desc:0 "We have successfully avoided the collapse of our empire!"
  rus.13.a:0 "Kiril has saved us!"
+ rus.14.title:0 "Kirill's endeavours in Kiev"
+ rus.14.desc:0 "Now that "
+ rus.14.a:0 "Kiril has saved us!"
