Austrian Focus Tree Update

--- a/localisation/AUS_l_english.yml
+++ b/localisation/AUS_l_english.yml
@@ -14,3 +14,96 @@
  AUS:0 "Austria"
  AUS_DEF:0 "Austria"
  AUS_ADJ:0 "Austrian"
+ AUS_army_focus:0 "Army Focus"
+AUS_army_focus_desc:0 "In order to ensure austrian safety we must invest in the army"
+AUS_liberate_italy:0 "Liberate Italy"
+AUS_liberate_italy_desc:0 "Italy has lived under cruel fascist rule for too long, it is our duty to bring freedom and democracy to them"
+AUS_modernize_our_industry:0 "Modernize our Industry"
+AUS_modernize_our_industry_desc:0 "In order to keep up with the rest of the world we must modernize our industry"
+AUS_construction_projects:0 "Construction Projects"
+AUS_construction_projects_desc:0 "We will fund construction projects for our citizens"
+AUS_create_the_liberty_arms_plant:0 "Create the Liberty Arms Plant"
+AUS_create_the_liberty_arms_plant_desc:0 "We will create an arms plant dedicated to liberty and democracy"
+AUS_focus_on_military_research:0 "Focus on Military Research"
+AUS_focus_on_military_research_desc:0 "By converting research to the military we can research more and more advanced technology at the cost of some unhappy citizens"
+AUS_prepare_for_the_next_conflict:0 "Prepare for the next Conflict"
+AUS_prepare_for_the_next_conflict_desc:0 "We must go into the next war prepared."
+AUS_prepare_our_industry_for_the_next_war:0 "Prepare our industry for the next war"
+AUS_prepare_our_industry_for_the_next_war_desc:0 "Our industry is outdated and too small for war, lets change that"
+AUS_emergency_powers_act:0 "Emergency Powers Act"
+AUS_emergency_powers_act_desc:0 "Just in case of an emergency powers must be given to the president"
+AUS_monitor_capitalism:0 "Monitor Capitalism"
+AUS_monitor_capitalism_desc:0 "Capitilism is a system where one company can become very powerful, more powerful than we would like we must moniter it"
+AUS_place_restrictions_on_private_companies:0 "Place Restrictions on Private Companies"
+AUS_place_restrictions_on_private_companies_desc:0 "By placing restrictions on private companies we can have companies be less private and contribute more to the people instead of themselves"
+AUS_create_jobs_for_the_poor:0 "Create Jobs for the Poor"
+AUS_create_jobs_for_the_poor_desc:0 "We have many unemployed citizens, creating low paying jobs for them will benefit us and them"
+AUS_fund_civilian_scientists:0 "Fund Civilian Scientists"
+AUS_fund_civilian_scientists_desc:0 "We have many talented minds among our population if we fund them and in turn, they help us with research it would benefit us and our people"
+AUS_civilian_focus:0 "Civilian Focus"
+AUS_civilian_focus_desc:0 "We must ensure that our civilians are took care of before anything else"
+AUS_continue_the_path:0 "Continue the Path"
+AUS_continue_the_path_desc:0 "We must not make any major changes to our political system lest we destablize our country"
+AUS_the_future_of_austria:0 "The Future of Austria"
+AUS_the_future_of_austria_desc:0 "Ever since germany collapsed austria has been in a tough spot we must decide what to do quickly"
+AUS_hire_factory_workers:0 "Hire Factory Workers"
+AUS_hire_factory_workers_desc:0 "By hiring more workers into our factories we can increase our production of military resources"
+AUS_invest_in_our_peoples_needs:0 "Invest in our Peoples Needs"
+AUS_invest_in_our_peoples_needs_desc:0 "Some of our population don't support the current government but by investing in our civilian's needs we can get them on our side"
+AUS_prepare_our_people_for_the_next_war:0 "Prepare our People for the next War"
+AUS_prepare_our_people_for_the_next_war_desc:0 "A new war is inevitable so we must prepare the people for it"
+AUS_austria_united_and_ready:0 "Austria, United and Ready!"
+AUS_austria_united_and_ready_desc:0 "Austria is ready for the next war"
+AUS_the_aerial_arms_factory:0 "The Aerial Arms Factory"
+AUS_the_aerial_arms_factory_desc:0 "By Creating a factory dedicated to making planes for the military we can bolster our numbers in the air"
+AUS_the_austrian_airforce:0 "The Austrian Airforce"
+AUS_the_austrian_airforce_desc:0 "We have no airforce but we can get one by buying planes from a radical but nearby nation, Italy"
+AUS_recruit_airmen:0 "Recruit airmen"
+AUS_recruit_airmen_desc:0 "Ever since we bought our airforce we have had the problem of having no experienced airmen. We shall recruit civilian airmen in order to fill this gap"
+AUS_the_european_democratic_league:0 "The European Democratic League"
+AUS_the_european_democratic_league_desc:0 "The allies is plagued by corruption and instablility we shall create our own independent faction"
+AUS_invest_in_private_construction_firms:0 "Invest in Private Construction Firms"
+AUS_invest_in_private_construction_firms_desc:0 "Private companies have alot of power, by buying shares and investing in them we can bend them to our will"
+AUS_go_with_the_allies:0 "Go with the allies"
+AUS_go_with_the_allies_desc:0 "The allies are a strong democratic alliance, so allying with them is an obvious decision."
+AUS_recruit_workers_into_our_factories:0 "Recruit Workers into our Factories"
+AUS_recruit_workers_into_our_factories_desc:0 "Our Factories need more workers in order to be an efficient working environment"
+AUS_lighten_up_gun_laws:0 "Lighten up Gun Laws"
+AUS_lighten_up_gun_laws_desc:0 "The gun laws in our country our strict but by lightening them up the demand for guns will go up and therefore we will be able to make more guns, at the cost of some more well arms criminals"
+AUS_go_with_the_republicans:0 "Go with the republicans"
+AUS_go_with_the_republicans_desc:0 "The democrats are too soft, we need a strong government against the evils of this world"
+AUS_go_with_the_democrats:0 "Go with the democrats"
+AUS_go_with_the_democrats_desc:0 "The republicans are too radical for running a country going with the democrats is the obious option"
+AUS_every_man_a_king:0 ""Every Man a King""
+AUS_every_man_a_king_desc:0 "Huey Long's idea of sharing wealth may seem radical at first but upon further inspection, it is an idea that can be beneficial to our economy. Let's honor his legacy"
+AUS_power_to_the_president:0 "Power to the President"
+AUS_power_to_the_president_desc:0 "Giving Power to the president will help with decision making in the governement"
+AUS_balanced_approach:0 "A Broader Coalition"
+AUS_balanced_approach_desc:0 "The Democrats are too soft on fascism whereas the Republicans can be extreme a balanced approach is optimal. Creating a coalition against them is the best way forward."
+AUS_invest_in_private_companies:0 "Invest in Private Companies"
+AUS_invest_in_private_companies_desc:0 "Private Companies allow for faster production and research speed at the cost of less control of our economy"
+AUS_economic_boom:0 "Economic Boom"
+AUS_economic_boom_desc:0 "Our investments have led to sucess! We now have a humble economy at our disposal."
+AUS_emergency_election:0 "Snap Election"
+AUS_emergency_election_desc:0 "The current landscape of Europe has dramatically changed in only the past few years. That, combined with the always increasing tensions between the German warlords, has led many politicans to call for an election to ensure stability in our country."
+AUS_our_industry:0 "The Austrian Economy"
+AUS_our_industry_desc:0 ""
+AUS_disclaimer:0 "§RAt the moment, only the democratic path is finished. In the future, we plan to add paths for each ideology.§!§!§!"
+AUS_idea_continue_the_path:0 "Path of Democracy"
+AUS_idea_civilian_focus:0 "Civilian Focus"
+AUS_every_man_a_king:0 "Every Man a King"
+AUS_airforce:0 "Austrian Airforce"
+AUS_idea_economic_boom:0 "Austrian Economic Boom"
+AUS_idea_monitor_capitalism:0 "Monitor Capitalism"
+AUS_civilian_investment:0 "Civilian Investment"
+AUS_private_companies:0 "Private Companies"
+AUS_restricted_companies:0 "Restricted Companies"
+AUS_united_and_ready:0 "Austria, United and Ready!"
+AUS_army_investment:0 "Army Investment"
+AUS_power_to_the_president:0 "Power To the President"
+
+aus.1.title:0 "Snap Election"
+aus.1.desc:0 "The current landscape of Europe has dramatically changed in only the past few years. That, combined with the always increasing tensions between the German warlords, has led many politicans to call for an election to ensure stability in our country."
+aus.1.a:0 "The Democrats"
+aus.1.b:0 "The Republicans"
+aus.1.c:0 "A Broader Coalition"
