Updated localization for new decisions&events

--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -46,8 +46,25 @@
  SOV_crisis_solved_desc:0 "WIP"
  SOV_governate_independence:0 "The Governorates Rebel"
  SOV_visit_kiev_desc:0 "WIP"
+ SOV_belarus_crisis_tour:0 "§!Unlocks decision: §YTour of Minsk§!."
+ SOV_belarus_crisis_20:0 "§YBelarusian Unrest§! will increase by §R15§!."
+ SOV_ukraine_crisis_tour:0 "§!Unlocks decision: §YTour of Kiev§!."
+ SOV_ukraine_crisis_20:0 "§YUkrainian Unrest§! will increase by §R20§!."
+ SOV_can_tour_ukraine:0 "Kiril Vladimirovich has planned a trip to §YKiev§!."
+ SOV_can_tour_belarus:0 "Kiril Vladimirovich has planned a trip to §YMinsk§!."
+ SOV_can_tour_caucasia:0 "Kiril Vladimirovich has planned a trip to §YBaku§!."
+ SOV_can_tour_baltic:0 "Kiril Vladimirovich has planned a trip to §YRiga§!."
+SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
+ SOV_governorate_crisis_decisions_desc:0 "\nThe Governorate system has slowly become unpopular with the local population. Tsar Kiril Vladimirovich has ignored this problem for some time, which has lead to civil unrest in recent years.\n\nUnrest in the Baltics: §Y[?baltic_crisis_level]§!\nUnrest in Belarus: §Y[?belarus_crisis_level]§!\nUnrest in Ukraine: §Y[?ukraine_crisis_level]§!\nUnrest in the Transcaucasia: §Y[?transcaucasia_crisis_level]§!"
+ SOV_governate_rebellion_decisions:0 "Rebellions within the Governorates"
+ SOV_governate_rebellion_decisions_desc:0 "\nWe have failed to reform the Governorate system. Our garrisons have reported armed assaults on many cities within the Governorates. It appears local militias within all of the Governorates have launched a sophisticated and planned revolt. §!"
+ SOV_gov_rebellion_imminent_decision:0 "The Governorates Rebel"
+ SOV_tour_of_kiev:0 "Tour of Kiev"
+ SOV_tour_of_riga:0 "Tour of Riga"
+ SOV_tour_of_baku:0 "Tour of Baku"
+ SOV_tour_of_minsk:0 "Tour of Minsk"
  rus.1.title:0 "A Trip to Kiev?"
- rus.1.desc:0 "Over the past couple of weeks, Kiril has been bombarded with reports of civil unrest in Ukraine. Perhaps Kiril could travel to Kiev and sort this issue out?"
+ rus.1.desc:0 "Over the past couple of weeks, Kiril has been bombarded with reports of civil unrest in Ukraine. Perhaps, Kiril could travel to Kiev and sort this issue out?"
  rus.1.a:0 "Plan the trip."
  rus.1.b:0 "We can't risk it."
  rus.2.title:0 "A Trip to Minsk?"
