--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -47,9 +47,14 @@
  SOV_governate_independence:0 "The Governorates Rebel"
  SOV_visit_kiev_desc:0 "WIP"
  SOV_belarus_crisis_tour:0 "§!Unlocks decision: §YTour of Minsk§!."
+ SOV_reformed_governorate_system:0 "§!§!The §YGovernorate System §!has been reformed."
+ SOV_completed_tour_of_kiev:0 "§!§!Kiril has finished the §YTour of Kiev§!."
  SOV_belarus_crisis_20:0 "§YBelarusian Unrest§! will increase by §R15§!."
  SOV_ukraine_crisis_tour:0 "§!Unlocks decision: §YTour of Kiev§!."
  SOV_ukraine_crisis_20:0 "§YUkrainian Unrest§! will increase by §R20§!."
+ SOV_ukraine_crisis_remove_25:0 "§YUkrainian Unrest§! will decrease by §G25§!."
+ SOV_ukraine_crisis_remove_20:0 "§YUkrainian Unrest§! will decrease by §G20§!."
+ SOV_ukraine_crisis_remove_15:0 "§YUkrainian Unrest§! will decrease by §G15§!."
  SOV_can_tour_ukraine:0 "Kiril Vladimirovich has planned a trip to §YKiev§!."
  SOV_can_tour_belarus:0 "Kiril Vladimirovich has planned a trip to §YMinsk§!."
  SOV_can_tour_caucasia:0 "Kiril Vladimirovich has planned a trip to §YBaku§!."
@@ -59,6 +64,10 @@ SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  SOV_governate_rebellion_decisions:0 "Rebellions within the Governorates"
  SOV_governate_rebellion_decisions_desc:0 "\nWe have failed to reform the Governorate system. Our garrisons have reported armed assaults on many cities within the Governorates. It appears local militias within all of the Governorates have launched a sophisticated and planned revolt. §!"
  SOV_gov_rebellion_imminent_decision:0 "The Governorates Rebel"
+ SOV_governorate_crisis_looming:0 "Governorate Crisis of 1937"
+ SOV_ukrainian_civ_administrations:0 "Implement Ukrainian Civilian Administrations"
+ SOV_ukrainian_infrastructure_projects:0 "Ukrainian Infrastructure Projects"
+ SOV_ukrainian_schools:0 "Ukrainian Schools"
  SOV_tour_of_kiev:0 "Tour of Kiev"
  SOV_tour_of_riga:0 "Tour of Riga"
  SOV_tour_of_baku:0 "Tour of Baku"
