Russian event bug fixes

--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -48,19 +48,23 @@
  SOV_visit_kiev_desc:0 "WIP"
  SOV_belarus_crisis_tour:0 "§!Unlocks decision: §YTour of Minsk§!."
  SOV_reformed_governorate_system:0 "§!§!The §YGovernorate System §!has been reformed."
- SOV_completed_tour_of_kiev:0 "§!§!Kiril has finished the §YTour of Kiev§!."
+ SOV_completed_tour_of_kiev:0 "§!§!Kirill has finished the §YTour of Kiev§!."
  SOV_belarus_crisis_20:0 "§YBelarusian Unrest§! will increase by §R15§!."
  SOV_ukraine_crisis_tour:0 "§!Unlocks decision: §YTour of Kiev§!."
  SOV_ukraine_crisis_20:0 "§YUkrainian Unrest§! will increase by §R20§!."
+ SOV_transcaucasia_crisis_tour:0 "§!Unlocks decision: §YTour of Baku§!.\n§RUnproper planning of Kirill's public tour route may lead to an assassination attempt§!."
+ SOV_transcaucasia_crisis_20:0 "§YTranscaucasian Unrest§! will increase by §R20§!."
+ SOV_baltic_crisis_tour:0 "§!Unlocks decision: §YTour of Riga§!."
+ SOV_baltic_crisis_20:0 "§YBaltic Unrest§! will increase by §R20§!."
  SOV_ukraine_crisis_remove_25:0 "§YUkrainian Unrest§! will decrease by §G25§!."
  SOV_ukraine_crisis_remove_20:0 "§YUkrainian Unrest§! will decrease by §G20§!."
  SOV_ukraine_crisis_remove_15:0 "§YUkrainian Unrest§! will decrease by §G15§!."
- SOV_can_tour_ukraine:0 "Kiril Vladimirovich has planned a trip to §YKiev§!."
- SOV_can_tour_belarus:0 "Kiril Vladimirovich has planned a trip to §YMinsk§!."
- SOV_can_tour_caucasia:0 "Kiril Vladimirovich has planned a trip to §YBaku§!."
- SOV_can_tour_baltic:0 "Kiril Vladimirovich has planned a trip to §YRiga§!."
+ SOV_can_tour_ukraine:0 "Kirill Vladimirovich has planned a trip to §YKiev§!."
+ SOV_can_tour_belarus:0 "Kirill Vladimirovich has planned a trip to §YMinsk§!."
+ SOV_can_tour_caucasia:0 "Kirill Vladimirovich has planned a trip to §YBaku§!."
+ SOV_can_tour_baltic:0 "Kirill Vladimirovich has planned a trip to §YRiga§!."
 SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
- SOV_governorate_crisis_decisions_desc:0 "\nThe Governorate system has slowly become unpopular with the local population. Tsar Kiril Vladimirovich has ignored this problem for some time, which has lead to civil unrest in recent years.\n\nUnrest in the Baltics: §Y[?baltic_crisis_level]§!\nUnrest in Belarus: §Y[?belarus_crisis_level]§!\nUnrest in Ukraine: §Y[?ukraine_crisis_level]§!\nUnrest in the Transcaucasia: §Y[?transcaucasia_crisis_level]§!"
+ SOV_governorate_crisis_decisions_desc:0 "\nThe Governorate system has slowly become unpopular with the local population. Tsar Kirill Vladimirovich has ignored this problem for some time, which has lead to civil unrest in recent years.\n\nUnrest in the Baltics: §Y[?baltic_crisis_level]§!\nUnrest in Belarus: §Y[?belarus_crisis_level]§!\nUnrest in Ukraine: §Y[?ukraine_crisis_level]§!\nUnrest in the Transcaucasia: §Y[?transcaucasia_crisis_level]§!"
  SOV_governate_rebellion_decisions:0 "Rebellions within the Governorates"
  SOV_governate_rebellion_decisions_desc:0 "\nWe have failed to reform the Governorate system. Our garrisons have reported armed assaults on many cities within the Governorates. It appears local militias within all of the Governorates have launched a sophisticated and planned revolt. §!"
  SOV_gov_rebellion_imminent_decision:0 "The Governorates Rebel"
@@ -73,7 +77,7 @@ SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  SOV_tour_of_baku:0 "Tour of Baku"
  SOV_tour_of_minsk:0 "Tour of Minsk"
  rus.1.title:0 "A Trip to Kiev?"
- rus.1.desc:0 "Over the past couple of weeks, Kiril has been bombarded with reports of civil unrest in Ukraine. Perhaps, Kiril could travel to Kiev and sort this issue out?"
+ rus.1.desc:0 "Over the past couple of weeks, Kirill has been bombarded with reports of civil unrest in Ukraine. Perhaps, Kirill could travel to Kiev and sort this issue out?"
  rus.1.a:0 "Plan the trip."
  rus.1.b:0 "We can't risk it."
  rus.2.title:0 "A Trip to Minsk?"
@@ -85,15 +89,15 @@ SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  rus.3.a:0 "Plan the trip."
  rus.3.b:0 "We can't risk it."
  rus.4.title:0 "A Trip to Baku?"
- rus.4.desc:0 "The caucasus governorate is our smallest governorate. However, it is one our most problematic governorates. Communist terror attacks occur almost monthly and we spend a lot of money on intellegence there. Sending Kiril there will require extensive preparations, and might not be the best for his safety."
- rus.4.a:0 "Kiril wants to go, regardless of the risks."
+ rus.4.desc:0 "The caucasus governorate is our smallest governorate. However, it is one our most problematic governorates. Communist terror attacks occur almost monthly and we spend a lot of money on intellegence there. Sending Kirill there will require extensive preparations, and might not be the best for his safety."
+ rus.4.a:0 "Kirill wants to go, regardless of the risks."
  rus.4.b:0 "We can't risk it."
  rus.5.title:0 "The Russian Governorate Crisis of 1937"
  rus.5.desc:0 "We have failed to quell unrest in the governorates."
  rus.5.a:0 "Ready the military on the borders."
  rus.13.title:0 "The Russian Governorate Crisis of 1937"
  rus.13.desc:0 "We have successfully avoided the collapse of our empire!"
- rus.13.a:0 "Kiril has saved us!"
- rus.14.title:0 "Kirill's endeavours in Kiev"
- rus.14.desc:0 "Now that "
- rus.14.a:0 "Kiril has saved us!"
+ rus.13.a:0 "Kirill has saved us!"
+ rus.14.title:0 "WIP"
+ rus.14.desc:0 "WIP"
+ rus.14.a:0 "WIP"
