--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -49,20 +49,25 @@
  SOV_belarus_crisis_tour:0 "§!Unlocks decision: §YTour of Minsk§!."
  SOV_reformed_governorate_system:0 "§!§!The §YGovernorate System §!has been reformed."
  SOV_completed_tour_of_kiev:0 "§!§!Kirill has finished the §YTour of Kiev§!."
+ SOV_completed_tour_of_baku:0 "§!§!Kirill has finished the §YTour of Baku§!."
+ SOV_completed_tour_of_riga:0 "§!§!Kirill has finished the §YTour of Riga§!."
+ SOV_completed_tour_of_minsk:0 "§!§!Kirill has finished the §YTour of Minsk§!."
  SOV_belarus_crisis_20:0 "§YBelarusian Unrest§! will increase by §R15§!."
  SOV_ukraine_crisis_tour:0 "§!Unlocks decision: §YTour of Kiev§!."
  SOV_ukraine_crisis_20:0 "§YUkrainian Unrest§! will increase by §R20§!."
+ SOV_ukraine_crisis_10:0 "§YUkrainian Unrest§! will increase by §R10§!."
  SOV_transcaucasia_crisis_tour:0 "§!Unlocks decision: §YTour of Baku§!.\n§RUnproper planning of Kirill's public tour route may lead to an assassination attempt§!."
  SOV_transcaucasia_crisis_20:0 "§YTranscaucasian Unrest§! will increase by §R20§!."
  SOV_baltic_crisis_tour:0 "§!Unlocks decision: §YTour of Riga§!."
  SOV_baltic_crisis_20:0 "§YBaltic Unrest§! will increase by §R20§!."
- SOV_ukraine_crisis_remove_25:0 "§YUkrainian Unrest§! will decrease by §G25§!."
- SOV_ukraine_crisis_remove_20:0 "§YUkrainian Unrest§! will decrease by §G20§!."
+ SOV_ukraine_crisis_remove_30:0 "§YUkrainian Unrest§! will decrease by §G30§!."
  SOV_ukraine_crisis_remove_15:0 "§YUkrainian Unrest§! will decrease by §G15§!."
- SOV_can_tour_ukraine:0 "Kirill Vladimirovich has planned a trip to §YKiev§!."
- SOV_can_tour_belarus:0 "Kirill Vladimirovich has planned a trip to §YMinsk§!."
- SOV_can_tour_caucasia:0 "Kirill Vladimirovich has planned a trip to §YBaku§!."
- SOV_can_tour_baltic:0 "Kirill Vladimirovich has planned a trip to §YRiga§!."
+ SOV_ukraine_crisis_remove_10:0 "§YUkrainian Unrest§! will decrease by §G10§!."
+ SOV_transcaucasia_crisis_remove_15:0 "§YTranscaucasian Unrest§! will decrease by §G15§!."
+ SOV_can_tour_ukraine:0 "Kirill Vladimirovich has arrived in §YKiev§!."
+ SOV_can_tour_belarus:0 "Kirill Vladimirovich has arrived in §YMinsk§!."
+ SOV_can_tour_caucasia:0 "Kirill Vladimirovich has arrived in §YBaku§!."
+ SOV_can_tour_baltic:0 "Kirill Vladimirovich has arrived in §YRiga§!."
 SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  SOV_governorate_crisis_decisions_desc:0 "\nThe Governorate system has slowly become unpopular with the local population. Tsar Kirill Vladimirovich has ignored this problem for some time, which has lead to civil unrest in recent years.\n\nUnrest in the Baltics: §Y[?baltic_crisis_level]§!\nUnrest in Belarus: §Y[?belarus_crisis_level]§!\nUnrest in Ukraine: §Y[?ukraine_crisis_level]§!\nUnrest in the Transcaucasia: §Y[?transcaucasia_crisis_level]§!"
  SOV_governate_rebellion_decisions:0 "Rebellions within the Governorates"
@@ -72,6 +77,9 @@ SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  SOV_ukrainian_civ_administrations:0 "Implement Ukrainian Civilian Administrations"
  SOV_ukrainian_infrastructure_projects:0 "Ukrainian Infrastructure Projects"
  SOV_ukrainian_schools:0 "Ukrainian Schools"
+ SOV_transcaucasian_civ_administrations:0 "Implement Transcaucasian Civilian Administrations"
+ SOV_increase_communist_raids:0 "Crackdown on Transcaucasian Communist Groups"
+ SOV_improve_baku_oil_fields:0 "Improve the Baku Oil Fields"
  SOV_tour_of_kiev:0 "Tour of Kiev"
  SOV_tour_of_riga:0 "Tour of Riga"
  SOV_tour_of_baku:0 "Tour of Baku"
@@ -101,3 +109,10 @@ SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  rus.14.title:0 "WIP"
  rus.14.desc:0 "WIP"
  rus.14.a:0 "WIP"
+ rus.21.title:0 "Kirill takes a Tour of Kiev"
+ rus.21.desc:0 "Kirill arrived in Kiev a couple of days ago. He's now ready to take the planned tour of the city in an opentop car. However, Kirill hasn't decided if he will go ahead with the plan."
+ rus.21.a:0 "Kirill agrees to take a tour of the city."
+ rus.21.b:0 "Kirill doesn't attend."
+ rus.40.title:0 "Tsar Kirill Vladimirovich has been Assassinated!"
+ rus.40.desc:0 ""
+ rus.40.a:0 "It was only a matter of time."
