Added starting event

--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -113,6 +113,9 @@ SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  rus.21.desc:0 "Kirill arrived in Kiev a couple of days ago. He's now ready to take the planned tour of the city in an opentop car. However, Kirill hasn't decided if he will go ahead with the plan."
  rus.21.a:0 "Kirill agrees to take a tour of the city."
  rus.21.b:0 "Kirill doesn't attend."
+ rus.30.title:0 "The Russian Empire in 1936"
+ rus.30.desc:0 "From the marshes of Belarus all the way to the permafrost coasts of Siberia, the Imperial Russian flag flies high. However, don't let the exterior mislead you. The Imperial Russian Empire has been letting it's previous glory fade. With every year since the Great Period of Instability, the empire has been faced with problem after problem. In recent years, one of the most important and largely ignored problem is that of the Governorate system.\nThe Governorate system was established during the  Great Period of Instability. It's goal is to counter independence movements by granting local populations limited autonomy. However, the years since then have dramatically been getting worse, with more protests and terrorist attacks happening every month. Tsar Kirill has long ignored this problem, and allowed it to slowly worsen over the last couple of years.\nAll the while, Soviet resistance groups have been attacking many major Russian cities, such as Petersburg and Tsaritsyn. These groups call for the abolishment of the monarchy, and an establishment of a proletariat government. While still rather a small resistance group, this problem could get out of hand if managed improperly."
+ rus.30.a:0 "Onwards!"
  rus.40.title:0 "Tsar Kirill Vladimirovich has been Assassinated!"
  rus.40.desc:0 ""
  rus.40.a:0 "It was only a matter of time."
